--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,7 +21,7 @@
     "firebase": "^11.10.0",
     "firebase-admin": "^13.6.0",
     "lucide-react": "^0.482.0",
-    "next": "15.2.2",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
